reports/intro_to_loops.log
Traceback (most recent call last):
  File "/Users/guestadmin/Library/Caches/pypoetry/virtualenvs/teach-python-_R03MHmW-py3.9/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/guestadmin/Library/Caches/pypoetry/virtualenvs/teach-python-_R03MHmW-py3.9/lib/python3.9/site-packages/nbclient/client.py", line 1082, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/guestadmin/Library/Caches/pypoetry/virtualenvs/teach-python-_R03MHmW-py3.9/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/guestadmin/Library/Caches/pypoetry/virtualenvs/teach-python-_R03MHmW-py3.9/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/Users/guestadmin/Library/Caches/pypoetry/virtualenvs/teach-python-_R03MHmW-py3.9/lib/python3.9/site-packages/nbclient/client.py", line 535, in async_execute
    await self.async_execute_cell(
  File "/Users/guestadmin/Library/Caches/pypoetry/virtualenvs/teach-python-_R03MHmW-py3.9/lib/python3.9/site-packages/nbclient/client.py", line 827, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/guestadmin/Library/Caches/pypoetry/virtualenvs/teach-python-_R03MHmW-py3.9/lib/python3.9/site-packages/nbclient/client.py", line 735, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
a = 2
if a == 2:
    # some code to be written at a later time

print('I am done')
------------------

[0;36m  File [0;32m"<ipython-input-31-6c997b82b4d7>"[0;36m, line [0;32m5[0m
[0;31m    print('I am done')[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m expected an indented block

IndentationError: expected an indented block (<ipython-input-31-6c997b82b4d7>, line 5)

